service-b/k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service-b
spec:
    rules:
        - host: service-b.127.0.0.1.nip.io
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: service-b
                        servicePort: 80
